remove static lints