@@ -12,9 +12,7 @@ plugins {
     alias(libs.plugins.google.ksp)
     alias(libs.plugins.jetbrains.kotlin.parcelize)
     alias(libs.plugins.jetbrains.kotlinx.serialization)
-    alias(libs.plugins.sonarqube)
     alias(libs.plugins.about.libraries)
-    checkstyle
 }
 
 val gitWorkingBranch = providers.exec {
@@ -144,74 +142,8 @@ ksp {
     arg("room.schemaLocation", "$projectDir/schemas")
 }
 
-// Custom dependency configuration for ktlint
-val ktlint by configurations.creating
-
-checkstyle {
-    configDirectory = rootProject.file("checkstyle")
-    isIgnoreFailures = false
-    isShowViolations = true
-    toolVersion = libs.versions.checkstyle.get()
-}
-
-tasks.register<Checkstyle>("runCheckstyle") {
-    source("src")
-    include("**/*.java")
-    exclude("**/gen/**")
-    exclude("**/R.java")
-    exclude("**/BuildConfig.java")
-    exclude("main/java/us/shandian/giga/**")
-
-    classpath = configurations.getByName("checkstyle")
-
-    isShowViolations = true
-
-    reports {
-        xml.required = true
-        html.required = true
-    }
-}
-
-val outputDir = project.layout.buildDirectory.dir("reports/ktlint/")
-val inputFiles = fileTree("src") { include("**/*.kt") }
-
-tasks.register<JavaExec>("runKtlint") {
-    inputs.files(inputFiles)
-    outputs.dir(outputDir)
-    mainClass.set("com.pinterest.ktlint.Main")
-    classpath = configurations.getByName("ktlint")
-    args = listOf("--editorconfig=../.editorconfig", "src/**/*.kt")
-    jvmArgs = listOf("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-}
-
-tasks.register<JavaExec>("formatKtlint") {
-    inputs.files(inputFiles)
-    outputs.dir(outputDir)
-    mainClass.set("com.pinterest.ktlint.Main")
-    classpath = configurations.getByName("ktlint")
-    args = listOf("--editorconfig=../.editorconfig", "-F", "src/**/*.kt")
-    jvmArgs = listOf("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-}
-
 tasks.register<CheckDependenciesOrder>("checkDependenciesOrder") {
     tomlFile = layout.projectDirectory.file("../gradle/libs.versions.toml")
-}
-
-afterEvaluate {
-    tasks.named("preDebugBuild").configure {
-        if (!System.getProperties().containsKey("skipFormatKtlint")) {
-            dependsOn("formatKtlint")
-        }
-        dependsOn("runCheckstyle", "runKtlint", "checkDependenciesOrder")
-    }
-}
-
-sonar {
-    properties {
-        property("sonar.projectKey", "TeamNewPipe_NewPipe")
-        property("sonar.organization", "teamnewpipe")
-        property("sonar.host.url", "https://sonarcloud.io")
-    }
 }
 
 dependencies {
@@ -223,10 +155,6 @@ dependencies {
     implementation(libs.newpipe.nanojson)
     implementation(libs.newpipe.extractor)
     implementation(libs.newpipe.filepicker)
-
-    // Checkstyle
-    checkstyle(libs.puppycrawl.checkstyle)
-    ktlint(libs.pinterest.ktlint)
 
     // AndroidX
     implementation(libs.androidx.appcompat)
